# foureg

./: .gitignore  LICENSE  README.md  pyproject.toml
foureg/: __init__.py  constraints.py  imreg.py  result.py  utils.py
tests/: test_imreg.py  test_utils.py
