[tool.poetry]
name = "foureg"
version = "0.1.0"
description = "Fourier transform based image registration"
authors = ["Guillem Ballesteros <guillem@maxwellrules.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
numpy = "^1.24.3"
scipy = "^1.10.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.3.1"
black = "^23.3.0"
ruff = "^0.0.270"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.ruff]
